Application export update + README update with instruction